2021-11-25 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix transformation of a*sin(x)+b*cos(x) to a*sqrt((b/a)^2+1)*sin(x+atan(b/a)) (primarily fixes some equations)
	* Add representsNonMatrix() and representsScalar() to many builtin functions (do not rely on representsNumber() which might return false for unknown variables - this fixes limit() unpredictability in some cases)
	* Make sorting more predictive

2021-11-24 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Apply same logic with separate to command, as with "to" at end of expression, when result contains no unit

2021-11-20 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix title of arguments > minimum argument when max arguments = -1, for builtin functions with arguments not defined in code

2021-11-18 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Interpret || as paralell to operator for all units, add support for Unicode paralell to symbol, and move || as paralell to parsing stage

2021-11-17 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add clear command, and Ctrl+L shortcut (for Windows)

2021-11-14 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add Calculator::calculateAndPrint() variant with formatting arguments
	* Remove "(default)" from adaptive mode in qalc
	* Localize condition expression in argument description

2021-11-12 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add micrometer and nanometer

2021-11-08 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Support "--" as end of options in qalc command line

2021-11-05 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix pearson() and spearman()

2021-11-01 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Avoid precision loss on output of interval when precerve_precision is true (e.g. when saving approximate variable)

2021-10-23 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix display of uncompletely solved equation (equality where value on the left is not a variable) with dual approximation